# SDLDemo

./: build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/sdldemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: hellolele2.amr
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/sdldemo/: IjkPlayerActivity.java  MainActivity.java  StickyScrollViewActivity.java  VideoListener.java  VideoPlayer.java
app/src/main/java/com/example/sdldemo/example/activities/: FileExplorerActivity.java  MediaListActivity.java  RecentMediaActivity.java  SampleMediaActivity.java  SettingsActivity.java  VideoActivity.java  VideoActivity2.java
app/src/main/java/com/example/sdldemo/example/adapter/: MediaAdapter.java
app/src/main/java/com/example/sdldemo/example/application/: AppActivity.java  Settings.java
app/src/main/java/com/example/sdldemo/example/bean/: MediaBean.java
app/src/main/java/com/example/sdldemo/example/content/: PathCursor.java  (+2 more)
app/src/main/java/com/example/sdldemo/util/: DateTimeUtil.java  LogUtil.java  ToastUtil.java
app/src/main/java/com/example/sdldemo/widgets/: StickyScrollView.java
app/src/main/res/layout/: activity_app.xml  activity_main.xml  activity_main2.xml  activity_media_list.xml  activity_player.xml  activity_player2.xml  activity_sticky_scroll_view.xml  item_media_layout.xml  widget_toolbar.xml
app/src/main/res/values/: attrs.xml  strings.xml  styles.xml
app/src/test/java/com/example/sdldemo/: ExampleUnitTest.java  Main.cpp
(+30 files in other folders)
